[package]
name = "facet-toml"
version = "0.25.12"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "TOML serialization and deserialization for Facet types"
keywords = ["toml", "serialization", "deserialization", "reflection", "facet"]
categories = ["encoding", "parsing", "data-structures"]

[features]
deserialize = ["alloc", "toml_edit/parse"]
serialize = ["alloc", "dep:facet-serialize", "toml_edit/display"]
std = [
    "alloc",
    "facet-core/std",
    "facet-reflect/std",
    "num-traits/std",
    "facet-serialize?/std",
]
alloc = ["facet-core/alloc", "facet-reflect/alloc", "facet-serialize?/alloc"]
rich-diagnostics = ["dep:ariadne", "std"]
default = ["serialize", "deserialize", "std", "rich-diagnostics"]

[dependencies]
ariadne = { version = "=0.5.1", optional = true }
log = "0.4.27"
num-traits = { version = "0.2.19", default-features = false }
toml_edit = { version = "0.22.26", default-features = false, features = [
    "parse",
], optional = true }
facet-core = { version = "0.27.11", path = "../facet-core", default-features = false }
facet-reflect = { version = "0.27.11", path = "../facet-reflect", default-features = false }
facet-serialize = { version = "0.24.12", path = "../facet-serialize", default-features = false, optional = true }
owo-colors = "4.2.1"

[dev-dependencies]
eyre = "0.6.12"
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
serde = { version = "1.0", features = ["derive"] }
divan = { version = "2.10.1", package = "codspeed-divan-compat" }
toml = "0.8.22"

[[bench]]
name = "compare_serde"
harness = false
