[package]
name = "facet-urlencoded"
version.workspace = true
edition.workspace = true
authors = ["Amos Wenger <amos@bearcove.eu>"]
repository.workspace = true
license.workspace = true
description = "URL encoded form serialization and deserialization for Facet types"
keywords = ["urlencoded", "form", "serialization", "deserialization", "facet"]
categories = ["encoding", "parsing", "data-structures"]
rust-version.workspace = true

[dependencies]
facet-core = { version = "0.12.0", path = "../facet-core" }
facet-reflect = { version = "0.11.0", path = "../facet-reflect" }
form_urlencoded = "1.2.1"
log = "0.4.27"

[dev-dependencies]
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
