[package]
name = "facet-urlencoded"
version = "0.23.7"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "URL encoded form serialization and deserialization for Facet types"
keywords = ["urlencoded", "form", "serialization", "deserialization", "facet"]
categories = ["encoding", "parsing", "data-structures"]
rust-version.workspace = true

[dependencies]
facet-core = { version = "0.27.0", path = "../facet-core" }
facet-reflect = { version = "0.27.0", path = "../facet-reflect" }
form_urlencoded = "1.2.1"
log = "0.4.27"

[dev-dependencies]
eyre = "0.6.12"
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
