[package]
name = "facet-yaml"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "YAML serialization and deserialization for Facet types"
keywords = ["yaml", "serialization", "deserialization", "reflection", "facet"]
categories = ["encoding", "parsing", "data-structures"]

[dependencies]
yaml-rust2 = "0.10.1"
facet-core = { version = "0.12.0", path = "../facet-core" }
facet-reflect = { version = "0.11.0", path = "../facet-reflect" }

[dev-dependencies]
facet = { path = "../facet" }
