[package]
name = "facet-yaml"
version = "0.24.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "YAML serialization and deserialization for Facet types"
keywords = ["yaml", "serialization", "deserialization", "reflection", "facet"]
categories = ["encoding", "parsing", "data-structures"]

[features]
deserialize = ["alloc"]
serialize = ["alloc"]
std = ["alloc", "facet-core/std", "facet-reflect/std"]
alloc = ["facet-core/alloc", "facet-reflect/alloc"]
default = ["serialize", "deserialize", "std"]
ulid = ["facet-core/ulid"]

[dependencies]
yaml-rust2 = "0.10.1"
facet-core = { version = "0.27.0", path = "../facet-core", default-features = false }
facet-reflect = { version = "0.27.0", path = "../facet-reflect", default-features = false }

[dev-dependencies]
facet = { path = "../facet" }
eyre = "0.6.12"
ulid = "1.2.1"
