[package]
name = "facet"
version = "0.26.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Re-exports the Facet trait and derive macros, along with Shape and all related types"
keywords = ["facet", "introspection", "reflection"]
categories = ["development-tools"]

[package.metadata.docs.rs]
features = ["std", "reflect", "camino", "ordered-float"]

[features]
default = ["std"]
reflect = ["dep:facet-reflect"] # Enables reflection via Peek and Poke types
testfeat = [] # Does nothing, only used for tests
std = ["facet-core/std", "alloc"] # Uses libstd and alloc
alloc = ["facet-core/alloc"] # Enables alloc support
camino = [
    "facet-core/camino",
] # Implements Facet for camino types (Utf8PathBuf, Utf8Path)
uuid = ["facet-core/uuid"] # Implements Facet for Uuid
ordered-float = ["facet-core/ordered-float"] # Implements Facet for OrderedFloat
jiff02 = [
    "facet-core/jiff02",
] # Implements Facet for jiff types (Zoned, Offset, etc.)
time = [
    "facet-core/time",
] # Implements Facet for time types (OffsetDateTime, PrimitiveDateTime, etc.)

[dependencies]
facet-core = { path = "../facet-core", version = "0.26.0", default-features = false }
facet-derive = { path = "../facet-derive", version = "0.26.0" }
facet-reflect = { path = "../facet-reflect", version = "0.26.0", optional = true }
static_assertions = "1.1.0"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
    "user-hooks",
] }
eyre = { version = "0.6.12", default-features = false }
facet-reflect = { path = "../facet-reflect" }
ordered-float = { version = "5.0.0", default-features = false }
